--- a/style.css
+++ b/style.css
@@ -219,9 +219,10 @@ figure {
   flex-direction: column;
   font-size: 25px;
   justify-content: space-around;
-  height: 25%;
+  height: 50%;
+  padding: 1rem;
   position: absolute;
-  width: 25%;
+  width: 50%;
   z-index: 999;
 }
 
@@ -252,3 +253,47 @@ footer {
   pointer-events: none;
   display: none;
 }
+
+/*Responsive style*/
+
+@media (max-width: 1100px) {
+  .movie {
+    width: 30%;
+  }
+
+  .movie__poster {
+    width: 200px;
+  }
+}
+
+@media (max-width: 800px) {
+  .movie__card {
+    width: 50%;
+  }
+
+  .main__error__message {
+    width: 80%;
+  }
+}
+
+@media (max-width: 600px) {
+  .movie {
+    width: 100%;
+  }
+}
+
+@media (max-width: 468px) {
+  .movie__card {
+    width: 50%;
+  }
+
+  .main__error__message {
+    width: 80%;
+  }
+}
+
+@media (max-width: 380px) {
+  .movie__card {
+    width: 100%;
+  }
+} ;
