--- a/style.css
+++ b/style.css
@@ -191,6 +191,22 @@ figure {
 .movie {
   text-align: center;
   width: 20%;
+  position: relative;
+}
+
+.movie__delete--icon {
+  cursor: pointer;
+  filter: invert(100%);
+  position: absolute;
+  right: 1rem;
+  top: 0.5rem;
+  transition: all ease 0.3s;
+  width: 1.25rem;
+}
+
+.movie__delete--icon:hover {
+  opacity: 0.7;
+  transform: scale(1.1);
 }
 
 .movie__title {
