--- a/style.css
+++ b/style.css
@@ -287,6 +287,11 @@ footer {
     width: 30%;
   }
 
+  .movie__delete--icon {
+    top: 0.5rem;
+    right: 0rem;
+  }
+
   .movie__poster {
     width: 12.5rem;
   }
@@ -305,6 +310,11 @@ footer {
 @media (max-width: 600px) {
   .movie {
     width: 100%;
+  }
+
+  .movie__delete--icon {
+    top: 0.5rem;
+    right: calc(35% - 0.5rem);
   }
 }
 
