--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ figure {
   border-radius: 0.625rem;
   color: var(--white);
   cursor: pointer;
+  font-size: 1.2rem;
   padding: 0.625rem;
   transition: all ease 0.3s;
 }
